feat: chatbot get 1 booking
