# src/app.js
@@ -21,6 +21,8 @@ const reviewRoutes = require("./routes/review.js");
 const notificationRoutes = require("./routes/notification.js");
 const locationHistorySearchRoutes = require("./routes/location_history_search.js");
 const locationSavedRoutes = require("./routes/location_saved.js");
+const chatBotRoutes = require("./routes/chatbot.js");
+
 const statisticsRoutes = require("./routes/statistics.js");
 const morgan =  require("morgan");
 const useragent =  require('express-useragent');
@@ -69,5 +71,7 @@ app.use("/api/notification", verifyToken, notificationRoutes);
 app.use("/api/location-history-search", verifyToken, locationHistorySearchRoutes);
 app.use("/api/location-saved", verifyToken, locationSavedRoutes);
 app.use("/api/statistics", verifyToken, statisticsRoutes);
+app.use("/api/chatbot", chatBotRoutes);
+
 
 module.exports = app;
