# src/swagger.yaml
@@ -17,6 +17,7 @@ tags:
   - name: review
   - name: user
   - name: notification
+  - name: chat
 paths:
   /statistics:
     get:
@@ -1881,6 +1882,99 @@ paths:
           description: Server internal error
       security:
         - api_key: []
+  /chatbot/find-1-booking:
+    post:
+      summary: chat get 1 bookings
+      tags:
+        - chatbot
+      parameters:
+        - in: query
+          name: status
+          description: 'available  2, complete: 1'
+          schema:
+            type: integer     
+            enum: [1,2]
+        - in: query
+          name: keyword
+          description: search in startAddress, endAddress, content
+          schema:
+            type: string
+      
+        - in: query
+          name: authorId
+          schema:
+            type: string
+            description: objectId of user
+        - in: query
+          name: bookingType
+          schema:
+            type: string
+            enum: ["Tìm tài xế", "Tìm hành khách"]
+        - in: query
+          name: isFavorite
+          schema:
+            type: boolean
+        - in: query
+          name: isMine
+          schema:
+            type: boolean
+        - in: query
+          name: isMayFavorite
+          schema:
+            type: boolean
+        - in: query
+          name: minPrice
+          schema:
+            type: integer
+        - in: query
+          name: maxPrice
+          schema:
+            type: integer
+        - in: query
+          name: startAddress
+          schema:
+            type: string
+        - in: query
+          name: endAddress
+          schema:
+            type: string
+        - in: query
+          name: startTime
+          description: in ISO Date Format  for example 2000-10-31T01:30:00.000-05:00
+          schema:
+            type: string
+        - in: query
+          name: endTime
+          description: in ISO Date Format for example 2000-10-31T01:30:00.000-05:00
+          schema:
+            type: string
+
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    default: true
+                  message:
+                    type: string
+                    example: string
+                  total:
+                    type: integer
+                    example: 1
+                  data:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Booking_get'      
+        '400':
+          description: Invalid ID supplied
+        '500':
+          description: Server internal error
+
 components:
   schemas:
     Apply_post:
